# uvc_recorder_plus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  ffigen.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  _onload.cpp  flutter_plugin_java.cpp  flutter_plugin_main.cpp  flutter_utils.cpp  flutter_uvc_frame_renderer.cpp  flutter_uvc_holder.cpp
android/src/main/cpp/include/: flutter_plugin.h  flutter_plugin_java.h  flutter_utils.h  flutter_uvc_frame_renderer.h  flutter_uvc_holder.h
android/src/main/cpp/include/aandusb/: aandusb_native.h  localdefines.h  utilbase.h  version.h
android/src/main/cpp/include/aandusb/common/: _onload.h  eglbase.h  glsurface.h  glutils.h  hardware_buffer_stub.h  jni_utils.h
android/src/main/kotlin/com/serenegiant/flutter/uvcplugin/: GlDualRenderer.kt  NativeLibLoader.kt  UVCManager.kt  UsbPermissionActivity.kt  UvcVideoRecorder.kt
android/src/main/kotlin/com/serenegiant/usb/: DeviceDetector.kt  DeviceDetectorFragment.kt
android/src/main/res/values/: strings.xml
android/src/main/res/values-ja/: strings.xml
android/src/main/res/xml/: device_filter_uvc.xml
android/src/test/kotlin/com/serenegiant/uvc_manager/: UVCManagerTest.kt
example/: .flutter-plugins-dependencies  README.md  pubspec.yaml
example/.dart_tool/: package_config.json  package_graph.json
example/.dart_tool/extension_discovery/: vs_code.json
example/android/: build.gradle.kts  local.properties
example/android/app/: build.gradle.kts  proguard-rules.pro
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
example/android/app/src/main/kotlin/com/serenegiant/flutter/uvc_manager_example/: MainActivity.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/lib/src/: camera_permission_handler.dart  uvc_control_settings.dart  uvc_control_value.dart  uvc_manager_view.dart
example/test/: widget_test.dart
lib/: uvc_manager.dart
lib/src/: uvc_control_info.dart  uvc_controller.dart  uvc_device_info.dart  uvc_manager_platform_interface.dart  uvc_preview.dart  uvc_recorder.dart  uvc_video_size.dart  uvcplugin_bindings_generated.dart
src/: flutter_plugin.h
test/: uvc_manager_test.dart
